fix divider alignment

--- a/src/app/styles/Divider.module.css
+++ b/src/app/styles/Divider.module.css
@@ -20,5 +20,5 @@
 
 .divider-text {
   padding: 0 1rem;
-  align-content: center;
+  height: 1px;
 }
